fix(ui): keep habit tracker full width on mobile

--- a/src/app/features/simple-counter/habit-tracker/habit-tracker.component.scss
+++ b/src/app/features/simple-counter/habit-tracker/habit-tracker.component.scss
@@ -17,7 +17,7 @@
   margin: 0 auto;
 }
 
-@container (max-width: #{$layout-xxxs - 1px}) {
+@container (max-width: #{$layout-xs - 1px}) {
   .habit-tracker-container {
     width: 100%;
   }
